--- a/src/locales/zh-cn/trade.json
+++ b/src/locales/zh-cn/trade.json
@@ -43,5 +43,6 @@
   "availableAmount": "余额",
   "gocharge": "去充值",
   "acturalincome": "实际到账",
-  "categoriestitle": "热门虚拟币"
+  "categoriestitle": "热门虚拟币",
+  "support": "交易支持货币"
 }
