国际化第二版

--- a/src/locales/en-US/common.json
+++ b/src/locales/en-US/common.json
@@ -1,5 +1,8 @@
 {
   "currency":"RMB",
   "buy": "Buy",
-  "sell": "Sell"
+  "sell": "Sell",
+  "balances": "Balances",
+  "orders": "Orders",
+  "simulatedtrading": "Simulated trading"
 }
