--- a/src/locales/en-US/trade.json
+++ b/src/locales/en-US/trade.json
@@ -44,5 +44,6 @@
   "gocharge": "go charge",
   "actualincome": "Amount",
   "categoriestitle": "Hot coins",
-  "support": "support"
+  "support": "support",
+  "kline": "K Line"
 }
