修改订阅的数据格式

--- a/src/locales/en-US/orders.json
+++ b/src/locales/en-US/orders.json
@@ -16,5 +16,7 @@
   "ordertime": "Date",
   "status": "Status",
   "dealtime": "Date",
-  "fee": "Fee"
+  "fee": "Fee",
+  "cancel": "Cancel",
+  "detail": "Detail"
 }
