--- a/src/locales/zh-cn/trade.json
+++ b/src/locales/zh-cn/trade.json
@@ -42,7 +42,7 @@
   "availableSum": "持有数量",
   "availableAmount": "余额",
   "gocharge": "去充值",
-  "acturalincome": "实际到账",
+  "actualincome": "实际到账",
   "categoriestitle": "热门虚拟币",
   "support": "交易支持货币",
   "kline": "K线"
