--- a/src/locales/en-US/trade.json
+++ b/src/locales/en-US/trade.json
@@ -8,7 +8,7 @@
   "hour": "1hour",
   "day": "1day",
   "categories": "Categories",
-  "coin": "coin",
+  "coin": "ship token",
   "lastprice": "last price",
   "change": "change",
   "new": "New",
@@ -31,7 +31,7 @@
   "tradebuy": "Buy",
   "tradesell": "Sell",
   "paycoin": "Select pay width",
-  "targetcoin": "Select target coin",
+  "targetcoin": "Select target ship token",
   "tradebuyprice": "Price",
   "tradesellprice": "Price",
   "tradebuyamount": "Amount",
@@ -43,7 +43,20 @@
   "availableAmount": "available",
   "gocharge": "go charge",
   "actualincome": "Amount",
-  "categoriestitle": "Hot coins",
+  "categoriestitle": "Hot Ships Token",
   "support": "support",
-  "kline": "K Line"
+  "kline": "K Line",
+  "searchtips": "Choose category above and filter",
+  "token": "Token",
+  "MSG_getDailyMarket": "Fail to get market data",
+  "MSG_getCoinConfig": "Fail to get token configuration",
+  "MSG_getUserCoin": "Fail to get user finance",
+  "MSG_getCoinCategory": "Fail to get token categories",
+  "MSG_getCommonAttr": "Fail to get common attributs",
+  "MSG_getTransac": "Fail to get transaction records",
+  "MSG_withdrawOrder_fail": "Fail to withdraw order",
+  "MSG_withdrawOrder_ok": "Success to withdraw order",
+  "MSG_fail": "Fail to get data",
+  "searchplaceholder": "search by ship token",
+  "search": "GO"
 }
