--- a/src/locales/zh-cn/coin-coin-exchange.json
+++ b/src/locales/zh-cn/coin-coin-exchange.json
@@ -2,7 +2,7 @@
   "or": " 或 ",
   "start_trade": "开始交易",
   "markets": "市场",
-  "coin": "币种",
+  "coin": "船币",
   "lastprice": "最新价",
   "change": "涨幅",
   "limitorder": "限价交易",
