--- a/src/locales/zh-cn/trade.json
+++ b/src/locales/zh-cn/trade.json
@@ -7,8 +7,8 @@
   "min30": "30分钟",
   "hour": "1小时",
   "day": "一天",
-  "categories": "分类检索",
-  "coin": "币种",
+  "categories": "船型",
+  "coin": "船币",
   "lastprice": "最新价",
   "change": "涨跌",
   "new": "最新成交",
@@ -28,8 +28,8 @@
   "currentpriceNum": "{amount}元",
   "limitorder": "限价交易",
   "marketorder": "市价交易",
-  "paycoin": "选择支付币种",
-  "targetcoin": "选择目标币种",
+  "paycoin": "选择支付船币",
+  "targetcoin": "选择目标船币",
   "tradebuy": "买入",
   "tradesell": "卖出",
   "tradebuyprice": "买入价",
@@ -45,5 +45,18 @@
   "actualincome": "实际到账",
   "categoriestitle": "热门虚拟币",
   "support": "交易支持货币",
-  "kline": "K线"
+  "kline": "K线",
+  "searchtips": "检索我要关注的船型",
+  "token": "船币",
+  "MSG_getDailyMarket": "获取行情数据失败",
+  "MSG_getCoinConfig": "获取token配置信息失败",
+  "MSG_getUserCoin": "获取用户资产信息失败",
+  "MSG_getCoinCategory": "获取token分类失败",
+  "MSG_getCommonAttr": "获取token属性失败",
+  "MSG_getTransac": "获取交易记录失败",
+  "MSG_withdrawOrder_fail": "用户撤单失败",
+  "MSG_withdrawOrder_ok": "用户撤单成功",
+  "MSG_fail": "获取失败",
+  "search": "搜索",
+  "searchplaceholder": "输入想查找的船币"
 }
