--- a/src/locales/zh-cn/header.json
+++ b/src/locales/zh-cn/header.json
@@ -1,4 +1,5 @@
 {
+  "home": "首页",
   "market": "行情",
   "otc": "法币交易",
   "exchange_a": "交易",
@@ -9,7 +10,7 @@
   "logout": "登出",
   "simulatedtrading": "模拟交易",
   "zh": "中",
-  "en": "英",
+  "en": "EN",
   "sitename": "船舶资产交易数字化平台",
   "companyname": "船舶资产交易数字化平台有限公司"
 }
