--- a/src/locales/zh-cn/login.json
+++ b/src/locales/zh-cn/login.json
@@ -2,5 +2,6 @@
   "title": "登录",
   "btn_txt": "登录",
   "register_guide": "还不是Wabi用户？",
-  "register_btn_txt": "立即注册"
+  "register_btn_txt": "立即注册",
+  "loginfail": "用户名或密码错误"
 }
