--- a/src/locales/zh-cn/register.json
+++ b/src/locales/zh-cn/register.json
@@ -6,5 +6,11 @@
   "pw1_placeholder": "请设置8-12位密码",
   "pw2_placeholder": "确认密码",
   "get_sms": "获取验证码",
-  "agreement_txt": "我已阅读并同意"
+  "agreement_txt": "我已阅读并同意",
+  "invalidcaptcha": "验证码无效",
+  "invalidphone": "手机号有误",
+  "pwdrequired": "密码需要包含字母与数字，至少8个字符",
+  "differentpwd": "两次密码不一致，请重新输入",
+  "registerok": "注册成功，请登录",
+  "sendcaptchafirst": "请先发送验证码"
 }
